log
Sun, May  4, 2025  5:21:48 PM: 
 tests:  1|8
total_score: 0/70
5729e4d
Sun, May  4, 2025  5:58:54 PM: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:46:5: error: expected ';' before 'return'
     return new;
     ^~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
9425871
Sun, May  4, 2025  5:59:20 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4e4228e
Sun, May  4, 2025  6:02:25 PM: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
8cddb24
Sun, May  4, 2025  6:02:46 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
856c938
Sun, May  4, 2025  6:03:25 PM: 
 treemap.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
d4d849e
Sun, May  4, 2025  6:08:16 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|6
total_score: 15/70
eb3dc4b
Sun, May  4, 2025  6:15:13 PM: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|6
total_score: 15/70
7511cb0
Sun, May  4, 2025  6:16:55 PM: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|6
total_score: 15/70
32e2a14
